<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.MainActivity">



    <TextView
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helveticaneuecyr_black"
        android:includeFontPadding="false"
        android:layout_margin="18sp"
        android:text="@string/app_name"
        android:textColor="@color/textLight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginHorizontal="18sp"
        android:layout_marginTop="18dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/background_search"
        app:layout_constraintTop_toBottomOf="@id/appName">


        <ImageView
            android:layout_height="16sp"
            android:layout_width="16sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            android:layout_marginEnd="7sp"
            app:tint="@color/textDarkAlt" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="@font/helveticaneuecyr_roman"
            android:textSize="@dimen/_12sdp"
            android:hint="@string/search_hint"
            android:textColor="@color/textDarkAlt"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:importantForAutofill="no" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:paddingStart="10dp"
        android:paddingEnd="18dp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="18sp"
        android:gravity="clip_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/createWithPicture"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/create_with_picture"
            android:src="@drawable/ic_picture"
            android:tint="@color/textDark" />

        <ImageButton
            android:id="@+id/createWithLink"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_marginHorizontal="20sp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/create_with_link"
            android:src="@drawable/ic_link"
            android:tint="@color/textDark" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="58sp"
        android:layout_height="58sp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button_background"
        android:foregroundGravity="top|fill_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/createNote"
            android:layout_width="58sp"
            android:layout_height="58sp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/create_note"
            android:src="@drawable/ic_edit"
            android:tint="@color/textDark" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>