<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBG"
    tools:context=".activities.CreateNoteActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        >

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="18dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            android:background="@null"
            android:tint="@color/textDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/doneButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="18dp"
            android:contentDescription="@string/done"
            android:src="@drawable/ic_done"
            android:background="@null"
            android:tint="@color/textDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <EditText
            android:id="@+id/inputNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="18dp"
            android:background="@null"
            android:fontFamily="@font/helveticaneuecyr_bold"
            android:hint="@string/note_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/textDark"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            />

        <TextView
            android:id="@+id/textDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneuecyr_light"
            android:includeFontPadding="false"
            android:textColor="@color/textDarkAlt"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
            app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
            app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>

        <EditText
            android:id="@+id/inputNoteDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="18dp"
            android:background="@null"
            android:fontFamily="@font/helveticaneuecyr_medium"
            android:hint="@string/note_description"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:paddingVertical="8dp"
            android:textColor="@color/textDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/viewDescriptionIndicator"
            app:layout_constraintTop_toBottomOf="@id/textDateTime"
            />
        
        <View
            android:id="@+id/viewDescriptionIndicator"
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/background_description_indicator"
            app:layout_constraintBottom_toBottomOf="@id/inputNoteDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputNoteDescription"/>

        <EditText
            android:id="@+id/inputNoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_margin="18dp"
            android:background="@null"
            android:fontFamily="@font/helveticaneuecyr_roman"
            android:gravity="top"
            android:hint="@string/type_your_note"
            android:textSize="14sp"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:minHeight="200dp"
            app:layout_constraintTop_toBottomOf="@id/inputNoteDescription"
            app:layout_constraintBottom_toBottomOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>